# schemas/opening.go
@@ -1,8 +1,6 @@
 package schemas
 
 import (
-	// "time"
-
 	"gorm.io/gorm"
 )
 
@@ -16,15 +14,12 @@ type Opening struct {
 	Salary int64
 }
 
-// type OpeningResponse struct {
-// 	ID uint `json:"id"`
-// 	CreatedAt time.Time `json:"createdAt"`
-// 	UpdatedAt time.Time `json:"updatedAt"`
-// 	DeletedAt time.Time `json:"DeletedAt,omitempty"`
-// 	Role string `json:"role"`
-// 	Company string `json:"company"`
-// 	Location string `json:"location"`
-// 	Remote bool `json:"remote"`
-// 	Link string `json:"link"`
-// 	Salary int64 `json:"salary"`
-// }
+type OpeningResponse struct {
+	Role string
+	Company string
+	Location string
+	Remote bool
+	Link string
+	Salary int64
+}
+
